--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  background-color: 'black';
 }
 
 .App-logo {
@@ -35,4 +36,11 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+p {
+  font-family: 'Shadows Into Light', cursive;
+}
+h1 {
+  font-family: 'Shadows Into Light', cursive;
 }
